--- a/resources/index.html
+++ b/resources/index.html
@@ -151,9 +151,9 @@
                     <param name="autostart" value="false" />
                     <param name="play" value="false" />
                     <param name="start" value="false" />
-                    <param name="src" value="my-mp4.mp4" />
+                    <param name="src" value="videos/mov.mov" />
 
-                    <embed src="videos/mp4.mp4"
+                    <embed src="videos/mov.mov"
                            width="560"
                            height="auto"
                            autoplay="false"
@@ -166,16 +166,16 @@
 
                 <figcaption>
                     <pre>
-                    &lt;object width="560" height="315" classid="clsid:CFCDAA03-8BE4-11cf-B84B-0020AFBBCCFA"&gt;
+                &lt;object width="560" height="315" classid="clsid:CFCDAA03-8BE4-11cf-B84B-0020AFBBCCFA"&gt;
                     &lt;param name="controls" value="ImageWindow" /&gt;
                     &lt;param name="autostart" value="false" /&gt;
                     &lt;param name="play" value="false" /&gt;
                     &lt;param name="start" value="false" /&gt;
-                    &lt;param name="src" value="my-mp4.mp4" /&gt;
+                    &lt;param name="src" value="videos/mov.mov" /&gt;
 
-                    &lt;embed src="videos/mp4.mp4"
+                    &lt;embed src="videos/mov.mov"
                            width="560"
-                           height="auto"
+                           height="315"
                            autoplay="false"
                            controller="true"
                            play="false"
@@ -260,7 +260,7 @@
                        width="560" height="315"
                 >
                     <source src="videos/mp4.mp4" type="video/mp4">
-                    <source src="videos/swf.swf" type="video/webm">
+                    <!--<source src="videos/swf.swf" type="video/webm">-->
                     This is the fallback text, in case the browser doesn't support HTML5. eg
                     Your browser does not support the video tag.
                 </video>
